remove legacy configuration (endorsed jars)